cilium-yaml/ext_authz.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideEnvoyConfig
metadata:
  name: ext-authz-test
spec:
  services:
    - name: echo-service-1
      namespace: default
      ports:
      - 8080
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      name: test-authz
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: "AUTO"
                stat_prefix: test-authz
                rds:
                  route_config_name: echo_route
                use_remote_address: true
                skip_xff_append: true
                http_filters:
                - name: envoy.filters.http.ext_authz
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                    transport_api_version: V3
                    grpc_service:
                      google_grpc:
                        target_uri: "192.168.20.11:50051"
                        stat_prefix: "ext_auth_grpc"
                    failure_mode_allow: false
                    include_peer_certificate: true
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: echo_route
      virtual_hosts:
      - name: "echo_route"
        domains: ["*"]
        routes:
        - match:
            prefix: "/"
          route:
            weighted_clusters:
              clusters:
              - name: "default/echo-service-1"
                weight: 100
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      name: "default/echo-service-1"
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      type: EDS
      #edsClusterConfig:
      #  serviceName: default/echo-service-1:8080
      outlier_detection:
        split_external_local_origin_errors: true
        consecutive_local_origin_failure: 2
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      name: "default/ext-authz"
      connect_timeout: 5s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      dns_refresh_rate: 1s
      load_assignment:
        cluster_name: "default/ext-authz"
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.20.11
                      port_value: 50051
